2007-07-25  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkaboutdialog.xml: Update with 2.12 API.

2007-07-25  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkscalebutton.xml:
	* pygtk-gtk-classes.xml: Add new gtk.ScaleButton() docs.

2007-07-24  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkbuildable.xml:
	* pygtk-gtk-classes.xml: Add new gtk.Buildable() docs.

	* pygtk-gtkbuilder.xml: Add note "new 2.12 method"

2007-07-22  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkbuilder.xml:
	* pygtk-gtk-classes.xml: Add new gtk.Builder() docs.

2007-07-13  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtktreeview.xml:
	(gtk_tree_view_convert_widget_to_bin_window_coords)
	(gtk_tree_view_convert_widget_to_tree_coords)
	(gtk_tree_view_convert_tree_to_bin_window_coords)
	(gtk_tree_view_convert_tree_to_widget_coords)
	(gtk_tree_view_convert_bin_window_to_tree_coords)
	(gtk_tree_view_convert_bin_window_to_widget_coords): Add.

2007-07-12  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkcontainer.xml: Make a separate section for class methods,
	fix child property as write only. Fix bug #370936

2007-07-12  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkimage.xml:
	(gtk_image_new_from_file)
	(gtk_image_new_from_pixbuf)
	(gtk_image_new_from_pixmap)
	(gtk_image_new_from_image): Add, Fix #371293 

2007-03-09  Rafael Villar Burke  <pachi@rvburke.com>

	* pygtk-gtklabel.xml: Fix #41645 s/get_user_markup/get_use_markup/

2007-02-27  Rafael Villar Burke  <pachi@rvburke.com>

	* pygtk-gdkpixbuf.xml: Add missing flip method documentation
		Fix a typo s/roatate/rotate/

2007-02-15  Rafael Villar Burke  <pachi@rvburke.com>

	* pygtk2-gtkprintoperation.xml: Change variable name print with print_op
	as print is a reserved word in python

2006-10-11  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml: Remove Author info.

	* pygtk-introduction.xml: Remove Copyright and License section.
