@@ -50,6 +50,10 @@ item (new in PyGTK 2.4)</refpurpose>
 	<methodparam><parameter role="keyword">icon_size</parameter></methodparam>
       </methodsynopsis>
       <methodsynopsis language="python">
+	<methodname><link linkend="method-gtkaction--create-menu">create_menu</link></methodname>
+	<methodparam></methodparam>
+      </methodsynopsis>
+      <methodsynopsis language="python">
 	<methodname><link linkend="method-gtkaction--create-menu-item">create_menu_item</link></methodname>
 	<methodparam></methodparam>
       </methodsynopsis>
@@ -125,6 +129,15 @@ item (new in PyGTK 2.4)</refpurpose>
 </synopsis>
 
   </refsect1>
+    
+    <refsect1>
+		<title>Implemented Interfaces</title>
+		<para>
+			<link linkend="class-gtkaction"><classname>gtk.Action</classname></link>
+			implements 
+			<link linkend="class-gtkbuildable"><classname>gtk.Buildable</classname></link>
+		</para>
+	</refsect1>
 
   <refsect1 id="properties-gtkaction">
     <title>gtk.Action Properties</title>
@@ -581,6 +594,33 @@ must be one of:</para>
       <para>This method is intended for use by <link
 linkend="class-gtkaction"><classname>gtk.Action</classname></link>
 implementations to create icons displayed in the proxy widgets.</para>
+
+    </refsect2>
+    
+    <refsect2 id="method-gtkaction--create-menu">
+      <title>gtk.Action.create_menu</title>
+
+      <programlisting><methodsynopsis language="python">
+	  <methodname>create_menu</methodname>
+	  <methodparam></methodparam>
+	</methodsynopsis></programlisting>
+      <variablelist>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara>the menu item provided by the action, or
+      <literal>None</literal>.</simpara></listitem>
+	</varlistentry>
+      </variablelist>
+
+      <note>
+	<para>This method is available in PyGTK 2.12 and above.</para>
+      </note>
+
+      <para>
+        If action provides a <link linkend="class-gtkmenu"><classname>gtk.Menu</classname></link>.
+        widget as a submenu for the menu item or the toolbar item it creates, <methodname>create_menu</methodname>() method
+        returns an instance of that menu.
+      </para>
 
     </refsect2>
 
