@@ -1,5 +1,9 @@
 2007-07-25  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
+	* pygtk-gtkaction.xml: Update with 2.12 API.
+
+2007-07-25  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
 	* pygtk-gtkaboutdialog.xml: Update with 2.12 API.
 
 2007-07-25  Gian Mario Tagliaretti  <gianmt@gnome.org>
